# satellite-kafka-spark-delta-lake-pipeline-example

./: .gitignore  .gitmodules  README.md  build-event-flatbuffers.sh  build-flatc.sh  docker-compose.yml  event.fbs  figures.ipynb  requirements-notebook.txt  requirements.txt  sample_data.py
docker/: event-consumer.dockerfile  event-consumer.dockerignore  producer.dockerfile  producer.dockerignore  sample-data.dockerfile  sample-data.dockerignore
event-consumer/: build.sbt  event-consumer.properties
event-consumer/etl-pipeline/src/main/resources/: log4j2.properties
event-consumer/etl-pipeline/src/main/scala/com/poc/: KafkaSparkClient.scala  Schema.scala  Utils.scala
event-consumer/src/main/java/com/poc/: Event.java
event-consumer/src/main/scala/com/poc/: EtlPipeline.scala  KafkaSparkClient.scala  Schema.scala  Utils.scala
event-producer/: CMakeLists.txt
event-producer/include/producer/: event_generated.h  file_handler.h  kafka.h  utils.h
event-producer/src/: file_handler.cpp  main.cpp  utils.cpp
producer/include/producer/: parse.h
producer/src/: kafka.cpp  parse.cpp
